--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,8 @@ wsgi-file = /home/ubuntu/web/blog/hello.py
 # python 程序内用以启动的 application 变量名
 callable = app
 
+pidfile = /tmp/blog.pid
+
 # 处理器数
 processes = 1
 
